
  BEHAVIOUR CHANGES

   * Use shared repositories by default in svn-import command.

  TESTS

   * Add blackbox test for svn-import with dumpfile. (#123493)

  PERFORMANCE

   * do_update() is now used to find the contents of a directory recursively. 
     This should reduce the number of roundtrips significantly when 
	 finding file id mappings.

  FEATURES
   
   * add -v option to svn-upgrade

   * store and allow setting the branching scheme in subversion.conf

   * allow setting the branching scheme from a file property 
     on the repository root

   * Support true push (#80612).

   * Support commits in heavy checkouts (#79330).

   * Support using custom branching schemes.

   * Support pushing new branches.

   * Add --prefix option to svn-import. (#125993)

   * Add 'bzr help svn-branching-schemes'

   * Branching schemes can now be autodetected using some simple heuristics. 
     (#81976)

  INTERNALS

   * Implement SvnRaTransport.local_abspath(). (#117090)

   * Implement SvnRemoteAccess.create_branch().

   * Implement SvnWorkingTree.smart_add() (#79336)

bzr-svn 0.3.4	2007-06-15

  BUG FIXES

  * Check for a working pysqlite, rather than checking that the 
    first one found works. (#115026)

  * Fix compatibility with Bazaar 0.17.

bzr-svn 0.3.3	2007-04-29

  IMPROVEMENTS

  * Fix compatibility with Bazaar 0.16 (#110164)

  * Don't do extra checkout before push if possible. (#91885)

  * Set parent URLs in svn-import. (#94406)

  * Don't show "not updating working tree" warnings when pushing.

bzr-svn 0.3.2	2007-03-13

  BUG FIXES

  * Fix compatibility with Bazaar 0.15.

  * Check for parent paths moving as well in LogWalker.find_latest_change(). 
    Fixes #84087.

  * Handle unicode characters in commit messages. Fixes #85551.

  * Handle unicode characters in filenames (#54736)

bzr-svn 0.3.1	2007-01-31

  BUG FIXES
 
   *  Warning given when the version of python-subversion is not patched 
      is now fixed. (Wouter van Heyst)
